2015-06-24  James Anderson  <anderson@gfz-potsdam.de>

	* src/DiFX_Delay_Server.c:
	* src/CALCServer.h:
	* src/DiFX_Delay_Server.x: bugfixes for RadioAstron compilation

2015-05-15  James Anderson  <anderson@gfz-potsdam.de>

	* src/DiFX_Delay_Server.x:
	* src/checkDiFX_Delay_Server.c:
	* src/CALC_9_1_RA_Server.c:
	* src/DiFX_Delay_Server.c: bugfixes

2015-05-06  James Anderson  <anderson@gfz-potsdam.de>

	* src/checkCALC_9_1_RA_Server.c:
	* src/CALC_9_1_RA_Server.c:
	* calc9.1.RA/calcinit.f:
	* calc9.1.RA/calcmodl2.f:
	* src/DiFX_Delay_Server_Params.c:
	* startCalcServer.in:
	* src/checkDiFX_Delay_Server.c:
	* src/DiFX_Delay_Server.x:
	* src/DiFX_Delay_Server.c: bugfixes

2015-05-04  James Anderson  <anderson@gfz-potsdam.de>

	* configure.ac:
	* src/Makefile.am: Bugfixes to make things compile

2015-04-29  James Anderson  <anderson@gfz-potsdam>

	* src/CALC5Server_Params.c:
	* src/CALC_9_1_RA_Server_Params.c:
	* src/DiFX_Delay_Server.x:
	* src/DiFX_Delay_Server_Params.h:
	* src/DiFX_Delay_Server.c:
	* src/DiFX_Delay_Server_Params.c:
	* src/checkDiFX_Delay_Server.c: Updates for passing delay server
	parameters for FITS CT table

2015-04-13  James Anderson  <anderson@gfz-potsdam>

	* src/DiFX_Delay_Server.c:
	* src/checkDiFX_Delay_Server.c:
	* src/DiFX_Delay_Server.x:
	* src/MATHCNST.H: updates for changes to calcif2 to support
	DiFX_Delay_Server

2015-03-23  James Anderson  <anderson@gfz-potsdam>
* Changes for new DiFX_Delay_Server RPC calls to allow multiple
	different delay srevers to be implemented and called
	through a common RPC call to a server that then farms out
	the work to the appropriate server
	* src/CALC5Server.c:
	* src/CALCServer.h:
	* src/CALC_9_1_RA_Server.c:
	* src/CALC_9_1_RA_Server.h:
	* src/CALC_9_1_RA_Server_test.x:
	* src/CALC_9_1_RA_xdr.c:
	* src/CALC_xdr.c:
	* src/DiFX_Delay_Server.c:
	* src/DiFX_Delay_Server.h:
	* src/DiFX_Delay_Server.x:
	* src/DiFX_Delay_Server_xdr.c:
	* src/Makefile.am:
	* src/checkCALC_9_1_RA_Server.c: